@@ -199,8 +199,8 @@ let primitives_table = create_hashtable 57 [
   "%addint", Paddint;
   "%subint", Psubint;
   "%mulint", Pmulint;
-  "%divint", Pdivint;
-  "%modint", Pmodint;
+  "%divint", Pdivint Safe;
+  "%modint", Pmodint Safe;
   "%andint", Pandint;
   "%orint", Porint;
   "%xorint", Pxorint;
@@ -255,8 +255,8 @@ let primitives_table = create_hashtable 57 [
   "%nativeint_add", Paddbint Pnativeint;
   "%nativeint_sub", Psubbint Pnativeint;
   "%nativeint_mul", Pmulbint Pnativeint;
-  "%nativeint_div", Pdivbint Pnativeint;
-  "%nativeint_mod", Pmodbint Pnativeint;
+  "%nativeint_div", Pdivbint { size = Pnativeint; is_safe = Safe };
+  "%nativeint_mod", Pmodbint { size = Pnativeint; is_safe = Safe };
   "%nativeint_and", Pandbint Pnativeint;
   "%nativeint_or",  Porbint Pnativeint;
   "%nativeint_xor", Pxorbint Pnativeint;
@@ -269,8 +269,8 @@ let primitives_table = create_hashtable 57 [
   "%int32_add", Paddbint Pint32;
   "%int32_sub", Psubbint Pint32;
   "%int32_mul", Pmulbint Pint32;
-  "%int32_div", Pdivbint Pint32;
-  "%int32_mod", Pmodbint Pint32;
+  "%int32_div", Pdivbint { size = Pint32; is_safe = Safe };
+  "%int32_mod", Pmodbint { size = Pint32; is_safe = Safe };
   "%int32_and", Pandbint Pint32;
   "%int32_or",  Porbint Pint32;
   "%int32_xor", Pxorbint Pint32;
@@ -283,8 +283,8 @@ let primitives_table = create_hashtable 57 [
   "%int64_add", Paddbint Pint64;
   "%int64_sub", Psubbint Pint64;
   "%int64_mul", Pmulbint Pint64;
-  "%int64_div", Pdivbint Pint64;
-  "%int64_mod", Pmodbint Pint64;
+  "%int64_div", Pdivbint { size = Pint64; is_safe = Safe };
+  "%int64_mod", Pmodbint { size = Pint64; is_safe = Safe };
   "%int64_and", Pandbint Pint64;
   "%int64_or",  Porbint Pint64;
   "%int64_xor", Pxorbint Pint64;
